# 3105_TP2-Geopositioning-Relation-People

./: CMakeLists.txt  Makefile  README.md  coordonnees.cpp  coordonnees.h  gtest_coordonnees.cpp  gtest_tableau.cpp  personne.cpp  personne.h  tableau.h  tp2.cpp  tp2.h
tests/: evaluer.sh  traces00+.txt  traces00.txt  traces01+.txt  traces01.txt  traces02+.txt  traces02.txt  traces03+.txt  traces03.txt  traces04+.txt  traces04.txt  traces05+.txt  traces05.txt  traces06+.txt  traces06.txt  traces07+.txt  traces07.txt  traces08+.txt  traces08.txt  traces09+.txt  traces14+.txt  traces15+.txt  traces16+.txt  traces17+.txt  traces18+.txt
